# ai_trading_agent

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Makefile  README.md  README_FEATURE.md  README_MODELE.md  config.py  conftest.py  docker-compose.yml  fetch.py  fullscale_btc_xgboost.yaml  metrics.schema.json  pipeline.py  pipeline_test.py  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.streamlit/: config.toml
ai_trading/: __init__.py  __main__.py  config.py
configs/: default.yaml  fullscale_btc.yaml
data/: fetcher.py  main.py
docs/: AI_Trading_reformulation_et_tech_5_modeles.docx  AI_Trading_reformulation_et_tech_6_modeles.docx  Projet Bot Trading.md  cnn_modifs.md  explication_classification.md  multi_agent_system.md
lib/: __init__.py  artifacts.py  backtest.py  calibration.py  config.py  data.py  features.py  metrics.py  models.py  qa.py  scaler.py  seed.py  splitter.py  timeframes.py  trainer.py
models/: base_predictor.py  registry.py  supervised_predictor.py
scripts/: compare_runs.py  test_github_math.py
testing/: __init__.py  backtesting.py  config.json  grid_search.py  realtime_testing.py  threshold_comparison.py
tests/: __init__.py  conftest.py  test_adapter_xgboost.py  test_aggregation.py  test_app_entry.py  test_base_model.py  test_baseline_buy_hold.py  test_baseline_no_trade.py  test_baseline_sma_rule.py  test_cli.py  test_compare_runs.py  test_config.py  test_config_validation.py  (+65 more)
(+411 files in other folders)
